package adapterMode;

/**
 * 注册渠道枚举，消除魔法字符串
 */
public enum RegisterChannel {
    QQ,
    WECHAT,
    TOKEN,
    ALIPAY
}
